2010-04-23  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelEnumerableTests.cs: Fix namespace, add NET_4_0 #ifdef
	* ParallelTestHelper.cs: Fix namespace

2010-04-15  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelEnumerableTests.cs: Tweak Skip unit test to avoid deadlocking for now

2010-04-15  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelEnumerableTests.cs:
	* ParallelTestHelper.cs: Add PLinq unit tests

2010-03-24  Jb Evain  <jbevain@novell.com>

	* EnumerableTest.cs: add test for #582502.

2009-11-12  Eric Maupin  <me@ermau.com>

	* EnumerableMoreTest.cs: Added ToLookup test for null keys, updated old test to check count.
	* LookupTest.cs: Added tests for contains, the enumerator and null keys in the indexer.

2009-04-03  Jb Evain  <jbevain@novell.com>

	* EnumerableTest.cs: test for bug 491841.

2009-03-28  Jb Evain  <jbevain@novell.com>

	* EnumerableTest.cs: add test for bug #490016.

2009-01-15  Jb Evain  <jbevain@novell.com>

	* LookupTest.cs: new tests.

2008-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* EnumerableTest.cs: Add test case for Average with nullable long.

2008-08-08  Jb Evain  <jbevain@novell.com>

	* EnumerableTest.cs: add test to ensure that Take doesn't consume
	an uneeded item from the source enumerable. Test by
	Jonathan Pryor  <jpryor@novell.com>.

2008-05-20  Roei Erez  <roeie@mainsoft.com>

	* Add tests for Queryable.AsQureyable

2008-05-15  Roei Erez  <roeie@mainsoft.com>

	* EnumerableAsQueryableTest.cs: test cases for Queryable.AsQueryable() implementation.

2008-05-08  Jonathan Pryor  <jpryor@novell.com>

	* EnumerableTest.cs: test Reverse() for non-IList types.
	* EnumerableMoreTest.cs: test LongCount() for non-array types.

2008-04-30  Jb Evain  <jbevain@novell.com>

	* EnumerableTest.cs: tests for average on int and long.

2008-04-22  Leonid Freydovich <leonidf@mainsoft.com>

	* QueryableProviderTest.cs: add simple test for Queryable.

2008-01-22  Jb Evain  <jbevain@novell.com>
