@@ -1,3 +1,8 @@
+2010-04-29  Jérémie Laval  <jeremie.laval@gmail.com>
+
+	* ParallelEnumerableTests.cs: Add Ignore attribute instead of commenting test.
+	Enable more tests.
+
 2010-04-23  Jérémie Laval  <jeremie.laval@gmail.com>
 
 	* ParallelEnumerableTests.cs: Fix namespace, add NET_4_0 #ifdef
